--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<!-- <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> -->
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Satakun Utama's Portfolio</title>
 	</head>
 	<body>
 		<slot />
@@ -18,5 +18,6 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: #303030;
 	}
 </style>
