--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,8 @@
 <footer class="text-center py-8 bg-slate-950 text-neutral-50">
 	<p>Satakun Utama, &copy; 2024 All Rights Reserved</p>
-	Site built with {Astro.generator}
+	<div>Site built with {Astro.generator}</div>
+	<div>
+		The GitHub icon belongs to GitHub, Inc. This site is not officially
+		affiliated or endorsed with this site.
+	</div>
 </footer>
