--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,12 @@
 import Layout from "../layouts/Layout.astro";
 import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
+import { Image } from "astro:assets";
+import litechatImage from "../imgs/litechat.png";
+import storyTailorImage from "../imgs/StoryTailor_Desktop_Fluent.png";
+import winQsmImage from "../imgs/WinQSM.png";
+import githubMark from "../imgs/github-mark-white.svg";
+import globeAlt from "../imgs/heroicons-globe-alt.svg";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -30,92 +36,113 @@ import NavBar from "../components/NavBar.astro";
 				</p>
 			</div>
 		</section>
-		<section
-			id="projects"
-			class="bg-gradient-to-br from-slate-900 to-slate-700 text-slate-50"
-		>
+		<section id="projects">
 			<h2 class="text-5xl font-bold pb-2">Projects</h2>
-			<div class="flex flex-col gap-2 mt-2">
-				<a
-					href="https://github.com/lines-of-codes/litechat"
-					target="_blank"
-					rel="noreferrer noopener"
-					class="card"
-				>
-					<h3>litechat</h3>
-					<p>
-						A lightweight and secure chat application.<br />
-						<strong>Related technologies:</strong> Web, PocketBase, Mithril.js
-					</p>
-				</a>
-				<a
-					href="https://github.com/StablerCharacter/StoryTailor"
-					target="_blank"
-					rel="noreferrer noopener"
-					class="card"
-				>
-					<h3>StoryTailor</h3>
-					<p>
-						Write stories anywhere. A cross-platform application for
-						writing visual novel stories.<br />
-						<strong>Related technologies:</strong> Flutter, Android,
-						PocketBase
-					</p>
-				</a>
-				<a
-					href="https://github.com/lines-of-codes/QSMSharp"
-					target="_blank"
-					rel="noreferrer noopener"
-					class="card"
-				>
-					<h3>QSMSharp</h3>
-					<p>
-						A server management software for Minecraft.<br />
-						<strong>Related technologies:</strong> C#, WinUI
-					</p>
-				</a>
+			<div id="projectList">
+				<div class="card" id="litechat">
+					<div class="card-content">
+						<h3>litechat</h3>
+						<p>
+							A lightweight and secure chat application.<br />
+							<strong>Related technologies:</strong> Web, PocketBase,
+							Mithril.js
+						</p>
+						<div class="card-links">
+							<a
+								href="https://github.com/lines-of-codes/litechat"
+								target="_blank"
+								rel="noopener noreferrer"
+							>
+								<Image
+									src={githubMark}
+									alt="GitHub"
+									width="32"
+									height="32"
+								/>
+							</a>
+							<a
+								href="https://litechat.taeyai.com"
+								target="_blank"
+								rel="noopener noreferrer"
+							>
+								<Image
+									src={globeAlt}
+									alt="Web"
+									width="32"
+									height="32"
+								/>
+							</a>
+						</div>
+					</div>
+					<div class="card-image">
+						<Image
+							src={litechatImage}
+							alt="A screenshot of litechat's interface."
+						/>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-content">
+						<h3>StoryTailor</h3>
+						<p>
+							Write stories anywhere. A cross-platform application
+							for writing visual novel stories.<br />
+							<strong>Related technologies:</strong> Flutter, Android,
+							PocketBase
+						</p>
+						<div class="card-links">
+							<a
+								href="https://github.com/lines-of-codes/litechat"
+								target="_blank"
+								rel="noopener noreferrer"
+							>
+								<Image
+									src={githubMark}
+									alt="GitHub"
+									width="32"
+									height="32"
+								/>
+							</a>
+						</div>
+					</div>
+					<div class="card-image">
+						<Image
+							src={storyTailorImage}
+							alt="A screenshot of StoryTailor's interface."
+						/>
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-content">
+						<h3>QSMSharp</h3>
+						<p>
+							A server management software for Minecraft.<br />
+							<strong>Related technologies:</strong> C#, WinUI
+						</p>
+						<div class="card-links">
+							<a
+								href="https://github.com/lines-of-codes/QSMSharp"
+								target="_blank"
+								rel="noreferrer noopener"
+							>
+								<Image
+									src={githubMark}
+									alt="GitHub"
+									width="32"
+									height="32"
+								/>
+							</a>
+						</div>
+					</div>
+					<div class="card-image">
+						<Image
+							src={winQsmImage}
+							alt="A screenshot of WinQSM's interface."
+						/>
+					</div>
+				</div>
 			</div>
 		</section>
-		<!-- <section
-			id="frameworks"
-			class="bg-gradient-to-br from-slate-900 to-slate-700 text-slate-50"
-		>
-			<h2 class="text-5xl font-bold mb-2">Frameworks</h2>
-			<p>I have experience with the following web frameworks:</p>
-			<ul class="mt-4 framework-list flex flex-col gap-4">
-				<li>
-					<h3>React</h3>
-					A reactive framework.
-				</li>
-				<li>
-					<h3>Next.js</h3>
-					React, but ✨ fancy ✨ with features optimized for speed and
-					developer productivity.
-				</li>
-				<li>
-					<h3>Mithril.js</h3>
-					Fast and lightweight JavaScript framework for single page applications.
-				</li>
-				<li>
-					<h3>Alpine.js</h3>
-					Simple, lightweight, yet powerful.
-				</li>
-				<li>
-					<h3>Astro</h3>
-					The framework for content-driven websites.
-				</li>
-			</ul>
-			<h4 class="mt-6 text-xl font-semibold mb-2">
-				Wonder what to pick for your needs?
-			</h4>
-			<div>
-				<button
-					class="bg-slate-600 hover:bg-slate-700 transition-colors px-4 py-2 rounded-3xl text-slate-50"
-				>
-					Take a quiz on web frameworks
-				</button>
-			</div>
-		</section> -->
 		<section
 			id="contact"
 			class="bg-gradient-to-bl from-slate-700 to-slate-900 text-slate-50"
@@ -153,7 +180,15 @@ import NavBar from "../components/NavBar.astro";
 	}
 
 	section {
-		@apply md:px-32 px-16 py-24;
+		@apply xl:px-40 md:px-32 px-14 md:py-24 py-16;
+	}
+
+	#projectList {
+		@apply flex flex-col gap-2;
+	}
+
+	#projects {
+		@apply bg-gradient-to-br from-slate-900 to-slate-700 text-slate-50 xl:px-40;
 	}
 
 	#projects h3 {
@@ -167,7 +202,41 @@ import NavBar from "../components/NavBar.astro";
 	}
 
 	#projects .card {
-		@apply hover:bg-slate-700 px-6 py-4 rounded-lg transition-colors;
+		@apply relative flex justify-between h-full lg:min-h-[350px] md:min-h-[300px];
+	}
+
+	#projects .card-content {
+		z-index: 2;
+		@apply px-6 py-4 transition-colors flex flex-col justify-center relative gap-3 w-full;
+	}
+
+	.card-content p {
+		@apply bg-slate-800 border border-slate-700 px-4 py-2 rounded-lg box-border w-fit lg:max-w-[30vw] md:max-w-[40vw];
+	}
+
+	#litechat .card-image img {
+		transform: translateY(10%);
+	}
+
+	.card-image {
+		z-index: 1;
+		display: none;
+		@apply md:flex items-center lg:w-[600px] md:w-[450px] absolute right-0;
+	}
+
+	.card-links {
+		@apply flex gap-3 md:gap-2;
+	}
+
+	.card-links a:hover img,
+	.card-links a:hover svg {
+		filter: brightness(1);
+	}
+
+	.card-links img,
+	.card-links svg {
+		filter: brightness(80%);
+		transition: filter 250ms;
 	}
 
 	#aboutMeHeader {
