Added TH version

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,7 @@
 <footer class="text-center py-8 bg-slate-950 text-neutral-50">
+	<div class="text-slate-300">
+		<a href="/">EN</a> | <a href="/th/">TH</a>
+	</div>
 	<p>Satakun Utama, &copy; 2024 All Rights Reserved</p>
 	<div>Site built with {Astro.generator}</div>
 	<div>
@@ -6,3 +9,15 @@
 		affiliated or endorsed with this site.
 	</div>
 </footer>
+
+<style>
+	a {
+		transition: 250ms;
+		text-decoration: underline;
+		text-underline-offset: 2px;
+	}
+
+	a:hover {
+		color: white;
+	}
+</style>
