Added language switch on NavBar, Update deps, Changed styles

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -4,6 +4,7 @@
 	<a href="#aboutme">About me</a>
 	<a href="#projects">Projects</a>
 	<a href="#contact">Contact</a>
+	<a href="/th/">TH</a>
 </nav>
 
 <style>
