--- a/src/components/th/NavBar.astro
+++ b/src/components/th/NavBar.astro
@@ -4,6 +4,7 @@
 	<a href="#aboutme">เกี่ยวกับฉัน</a>
 	<a href="#projects">โปรเจกต์</a>
 	<a href="#contact">ติดต่อ</a>
+	<a href="/">EN</a>
 </nav>
 
 <style>
