--- a/src/layouts/th/Layout.astro
+++ b/src/layouts/th/Layout.astro
@@ -10,7 +10,7 @@
 			rel="stylesheet"
 		/>
 		<meta name="generator" content={Astro.generator} />
-		<title>Satakun Utama's Portfolio</title>
+		<title>ศตคุณ อุตมะ</title>
 	</head>
 	<body>
 		<slot />
