--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import storyTailorImage from "../imgs/StoryTailor_Desktop_Fluent.png";
 import winQsmImage from "../imgs/WinQSM.png";
 import githubMark from "../imgs/github-mark-white.svg";
 import globeAlt from "../imgs/heroicons-globe-alt.svg";
+import "../styles/index.css";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -25,9 +26,7 @@ import globeAlt from "../imgs/heroicons-globe-alt.svg";
 			class="bg-gradient-to-tr from-slate-900 to-slate-700 text-slate-50 lg:grid lg:grid-cols-2"
 		>
 			<div class="flex flex-col justify-center">
-				<h2 class="text-5xl font-bold mb-2" id="aboutMeHeader">
-					About me
-				</h2>
+				<h2 class="mb-2" id="aboutMeHeader">About me</h2>
 				<p class="md:text-base text-lg">
 					I'm a student currently studying at the Nongkhai Technical
 					College in Thailand, and I love trying new things! I'm
@@ -37,7 +36,7 @@ import globeAlt from "../imgs/heroicons-globe-alt.svg";
 			</div>
 		</section>
 		<section id="projects">
-			<h2 class="text-5xl font-bold pb-2">Projects</h2>
+			<h2 class="pb-2">Projects</h2>
 			<div id="projectList">
 				<div class="card" id="litechat">
 					<div class="card-content">
@@ -147,7 +146,7 @@ import globeAlt from "../imgs/heroicons-globe-alt.svg";
 			id="contact"
 			class="bg-gradient-to-bl from-slate-700 to-slate-900 text-slate-50"
 		>
-			<h2 class="text-5xl font-bold mb-4">Contact</h2>
+			<h2 class="mb-4">Contact</h2>
 			<ul>
 				<li>
 					<strong>Email:</strong> linesofcodes[at]dailitation[dot]xyz
@@ -166,88 +165,3 @@ import globeAlt from "../imgs/heroicons-globe-alt.svg";
 	</main>
 	<Footer />
 </Layout>
-
-<style>
-	header {
-		background-image: linear-gradient(-20deg, #2b5876 0%, #4e4376 100%);
-		color: whitesmoke;
-		min-height: 90vh;
-		@apply md:px-32 px-16;
-	}
-	header,
-	#frameworks {
-		@apply flex flex-col justify-center;
-	}
-
-	section {
-		@apply xl:px-40 md:px-32 px-14 md:py-24 py-16;
-	}
-
-	#projectList {
-		@apply flex flex-col gap-2 lg:px-40;
-	}
-
-	#projects {
-		@apply bg-gradient-to-br from-slate-900 to-slate-700 text-slate-50;
-	}
-
-	#projects h3 {
-		@apply text-3xl font-semibold;
-	}
-
-	#projects > h2 {
-		background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-		color: transparent;
-		background-clip: text;
-	}
-
-	#projects .card {
-		@apply relative flex justify-between h-full lg:min-h-[350px] md:min-h-[300px];
-	}
-
-	#projects .card-content {
-		z-index: 2;
-		@apply px-6 py-4 transition-colors flex flex-col justify-center relative gap-3 w-full;
-	}
-
-	.card-content p {
-		@apply bg-slate-800 border border-slate-700 px-4 py-2 rounded-lg box-border w-fit lg:max-w-[30vw] md:max-w-[40vw];
-	}
-
-	#litechat .card-image img {
-		transform: translateY(10%);
-	}
-
-	.card-image {
-		z-index: 1;
-		display: none;
-		@apply md:flex items-center xl:w-[600px] md:w-[450px] absolute right-0 translate-y-8 xl:translate-y-0;
-	}
-
-	.card-links {
-		@apply flex gap-3 md:gap-2;
-	}
-
-	.card-links a:hover img,
-	.card-links a:hover svg {
-		filter: brightness(1);
-	}
-
-	.card-links img,
-	.card-links svg {
-		filter: brightness(80%);
-		transition: filter 250ms;
-	}
-
-	#aboutMeHeader {
-		background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
-		color: transparent;
-		background-clip: text;
-	}
-
-	#contact h2 {
-		background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-		color: transparent;
-		background-clip: text;
-	}
-</style>
