fixed goofy footer message

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
 	<div>Site built with {Astro.generator}</div>
 	<div>
 		The GitHub icon belongs to GitHub, Inc. This site is not officially
-		affiliated or endorsed with this site.
+		affiliated or endorsed by GitHub.
 	</div>
 </footer>
 
