--- a/src/components/th/Footer.astro
+++ b/src/components/th/Footer.astro
@@ -6,7 +6,7 @@
 	<div>เว็บไซต์ถูกสร้างขึ้นโดย {Astro.generator}</div>
 	<div>
 		ไอคอน GitHub เป็นของ GitHub Inc.
-		เว็บไซต์นี้ไม่มีความสัมพันธ์หรือได้รับการรับรองอย่างเป็นทางการกับไซต์นี้
+		เว็บไซต์นี้ไม่มีความสัมพันธ์หรือได้รับการรับรองอย่างเป็นทางการกับ GitHub
 	</div>
 </footer>
 
